--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="styles.js"></script>
+    <script src="scripts.js"></script>
     
 </body>
 </html>
